# testopenh264

./: README.md
EncDemo/android/: local.properties
EncDemo/android/app/: build.gradle  local.properties
EncDemo/android/app/gradle/wrapper/: gradle-wrapper.properties
EncDemo/android/app/src/main/: AndroidManifest.xml
EncDemo/android/app/src/main/cpp/: CMakeLists.txt  encoder_auto_test.cpp  welsenc_WelsEncTest_EncoderTest.h
EncDemo/android/app/src/main/java/welsenc/: MainActivity.java  ToastUtils.java  WelsEncTest.java
EncDemo/android/app/src/main/res/layout/: activity_main.xml
EncDemo/android/app/src/main/res/values/: strings.xml
EncDemo/android/gradle/wrapper/: gradle-wrapper.properties
